fix: Fixed task group service and task service description overriding logic